Wed Mar 16 09:00:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux-common.h:
          Fixed format specifiers for 64bit PPC

Wed Mar 16 06:26:54 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/README:
          Removed ACE_HAS_PTHREADS_STD.

Tue Mar 15 21:24:11 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-kfreebsd.h:
        * ace/config-lynxos.h:
        * ace/config-macosx-leopard.h:
        * ace/config-openbsd.h:
        * ace/config-win32-interix.h:
          Removed ACE_HAS_PTHREADS_STD.

        * tests/Service_Config_Test.cpp:
          Check features against ACE_HAS_PTHREADS instead of
          ACE_HAS_PTHREADS_STD.

Tue Mar 15 19:47:01 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_string.h:
        * ace/OS_NS_string.inl:
        * ace/OS_NS_string.cpp:
          Rearranged strtok_r() code to eliminate macro
          ACE_HAS_REENTRANT_FUNCTIONS.

Tue Mar 15 19:29:59 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-sunos5.5.h:
        * include/makeinclude/platform_sunos5_sunc++.GNU:
          Moved _POSIX_PTHREAD_SEMANTICS definition from config file to
          command line.

Mon Mar 14 18:58:40 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-sunos5.5.h:
          Define _POSIX_PTHREAD_SEMANTICS if it not already set.
          Hopefully fixes getpwnam_r() problems.

Mon Mar 14 11:01:41 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/config-openvms.h:
          Removed ACE_HAS_NONSTD_GETPWNAM_R.

Mon Mar 14 08:16:33 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_time.h:
        * ace/OS_NS_time.inl:
        * ace/OS_NS_time.cpp:
          Removed ghs method

        * ace/Guard_T.h:
          Doxygen change

        * ace/OS_NS_sys_utsname.cpp:
        * ace/Process.cpp:
        * ace/Process_Manager.cpp:
        * ace/WFMO_Reactor.cpp:
        * ace/config-sunos5.5.h:
        * ace/config-sunos5.7.h:
        * ace/config-vxworks6.4.h: